# Paws

./: .gitignore  .gitmodules  Cargo.toml  Package.swift  README.md  agents.md  codecov.yml  rust-toolchain.toml  wpt-alignment.md
crates/ios-example/: Cargo.toml  build.rs  ios_example.h
crates/ios-example/src/: lib.rs
crates/ios-example/tests/: smoke.rs
engine/: Cargo.toml
engine-ua-stylesheet/: Cargo.toml
engine-ua-stylesheet/src/: lib.rs
engine/benches/: commit_bench.rs  dom_bench.rs  engine_bench.rs  layout_bench.rs  stylesheet_bench.rs
engine/src/: io.rs  layout.rs  lib.rs  runtime.rs  style.rs  wasm.rs
engine/src/dom/: api.rs  document.rs  element.rs  handle.rs  mod.rs  node.rs  text.rs
engine/src/events/: dispatch.rs  event.rs  listener.rs  mod.rs
engine/src/hit_test/: mod.rs
engine/src/layout/: block.rs  mod.rs  stacking.rs  text.rs
engine/src/resources/: blob.rs  cache.rs  mod.rs  policy.rs  tests.rs
engine/src/style/: convert.rs  css_style_sheet.rs  dom.rs  ir_convert.rs  profiling.rs  sheet_cache.rs  typed_om.rs
engine/src/style/convert/: enums.rs  flex.rs  grid.rs  length.rs  mod.rs
engine/src/style/dom/: document.rs  element.rs  mod.rs  node.rs  selector.rs
engine/src/style/ir_convert/: helpers.rs  keyword.rs  length.rs  mod.rs  numeric.rs
engine/src/style/typed_om/: map.rs  mod.rs  tests.rs  types.rs
examples/: Cargo.toml  build.rs
examples/example-attributes/: Cargo.toml
examples/example-attributes/src/: lib.rs
examples/example-basic-element/: Cargo.toml
examples/example-basic-element-component/: Cargo.toml
examples/example-basic-element-component/src/: lib.rs
examples/example-basic-element/src/: lib.rs
examples/example-click-host/: Cargo.toml
examples/example-click-host/src/: lib.rs
examples/example-commit-full/: Cargo.toml
examples/example-commit-full/src/: lib.rs
examples/example-destroy-rebuild/: Cargo.toml
examples/example-destroy-rebuild/src/: lib.rs
examples/example-event-dispatch/: Cargo.toml
examples/example-event-dispatch/src/: lib.rs
examples/example-img-element/: Cargo.toml
examples/example-img-element/src/: lib.rs
examples/example-inline-image/: Cargo.toml
examples/example-inline-image/src/: lib.rs
examples/example-namespace/: Cargo.toml
examples/example-namespace/src/: lib.rs
examples/example-nested-elements/: Cargo.toml
examples/example-nested-elements/src/: lib.rs
examples/example-parsed-stylesheet/: Cargo.toml
examples/example-parsed-stylesheet/src/: lib.rs
examples/example-styled-element/: Cargo.toml
examples/example-styled-element/src/: lib.rs
examples/example-stylesheet-cascade/: Cargo.toml
examples/example-stylesheet-cascade/src/: lib.rs
examples/src/: lib.rs
examples/yew/example-yew-child-rerender/: Cargo.toml
examples/yew/example-yew-child-rerender/src/: lib.rs
examples/yew/example-yew-counter/: Cargo.toml
examples/yew/example-yew-counter/src/: lib.rs
examples/yew/example-yew-multi-state-setters/: Cargo.toml
examples/yew/example-yew-multi-state-setters/src/: lib.rs
examples/yew/example-yew-photo-cycle/: Cargo.toml
examples/yew/example-yew-photo-cycle/src/: lib.rs
examples/yew/example-yew-stale-read/: Cargo.toml
examples/yew/example-yew-stale-read/src/: lib.rs
examples/yew/example-yew-ub-deref/: Cargo.toml
examples/yew/example-yew-ub-deref/src/: lib.rs
examples/yew/example-yew-use-state-counter/: Cargo.toml
examples/yew/example-yew-use-state-counter/src/: lib.rs
examples/yew/example-yew-use-state-eq/: Cargo.toml
examples/yew/example-yew-use-state-eq/src/: lib.rs
ios-example-app/: README.md  RustBuildInputs.xcfilelist  demo.wat  ios-example-app-Bridging-Header.h
ios-renderer-backend/: Cargo.toml  Package.swift  build.rs  cbindgen.toml  ios_renderer_backend.h
ios-renderer-backend/Sources/PawsRenderer/: Callbacks.swift  OpExecutor.swift  PawsRendererView.swift  Renderer.swift
ios-renderer-backend/Sources/PawsRendererCore/: LayerApplicator.swift  PawsRenderer.swift
ios-renderer-backend/Sources/PawsRendererCore/include/: module.modulemap
ios-renderer-backend/Sources/PawsRendererFFI/: shim.c
ios-renderer-backend/Sources/PawsRendererFFI/include/: module.modulemap
ios-renderer-backend/src/: convert.rs  cull.rs  error.rs  ffi.rs  flatten.rs  image.rs  layerize.rs  lib.rs  ops.rs  pipeline.rs  renderer.rs  scroll.rs  thread.rs  types.rs
ios-renderer-backend/src/ffi/: exports.rs  imports.rs  mod.rs
ios-renderer-backend/src/handles/: label.rs  layer.rs  mod.rs  scroll_view.rs  text_view.rs  view.rs
ios-renderer-backend/tests/: component_integration.rs  integration.rs  wasm_e2e.rs
paws-runner/: Cargo.toml
paws-runner/src/: error.rs  lib.rs  runner.rs
paws-style-ir/: Cargo.toml
paws-wpt/: Cargo.toml  build.rs
paws-wpt/fixtures/css-overflow-layer-clipping/: Cargo.toml
paws-wpt/fixtures/css-overflow-layer-clipping/src/: lib.rs
paws-wpt/fixtures/css-overflow-overflow-longhand-computed/: Cargo.toml
paws-wpt/fixtures/css-overflow-overflow-longhand-computed/src/: lib.rs
paws-wpt/fixtures/css-overflow-overflow-shorthand/: Cargo.toml
paws-wpt/fixtures/css-overflow-overflow-shorthand/src/: lib.rs
paws-wpt/fixtures/dom-nodes-document-create-element/: Cargo.toml
paws-wpt/fixtures/dom-nodes-document-create-element/src/: lib.rs
paws-wpt/src/: lib.rs  testharness.rs
paws-wpt/tests/: css_overflow.rs  dom_nodes.rs
rust-wasm-binding/: Cargo.toml
rust-wasm-binding/src/: dom.rs  lib.rs
rust-wasm-binding/tests/: edge_cases.rs
scripts/: generate-sample-images.py  (+1 more)
view-macros/: Cargo.toml
view-macros/src/: lib.rs
view-macros/src/parse/: at_rule.rs  decl_only.rs  mod.rs  nested_body.rs  resolve.rs  stylesheet.rs
wasm-bridge/: Cargo.toml
wasm-bridge/benches/: engine_bench.rs
wasm-bridge/src/: lib.rs  wasm.rs
wasmtime-engine/: Cargo.toml  build.rs
wasmtime-engine/benches/: component_engine_bench.rs  engine_bench.rs
wasmtime-engine/src/: bindings.rs  component_linker.rs  host_impl.rs  lib.rs  shared_memory_access.rs  store_data.rs  wasm.rs
wasmtime-engine/tests/: e2e_examples.rs
(+53 files in other folders)
