[workspace]
resolver = "2"
members = [
    "engine",
    "wasmtime-engine",
    "rust-wasm-binding", "paws-style-ir", "view-macros",
    "ios-renderer-backend",
]
exclude = [
    "examples/example-basic-element",
    "examples/example-styled-element",
    "examples/example-nested-elements",
    "examples/example-stylesheet-cascade",
    "examples/example-parsed-stylesheet",
    "examples/example-attributes",
    "examples/example-destroy-rebuild",
    "examples/example-commit-full",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
# Shared dependency versions can be centralized here later if needed.
