[workspace]
resolver = "2"
members = [
    "engine",
    "wasmtime-engine",
    "paws-runner",
    "rust-wasm-binding", "paws-style-ir", "view-macros",
    "ios-renderer-backend",
    # yew fork (formerly its own workspace; now consumed by Paws so
    # `cargo test --all` covers yew's unit tests — see the backed-up
    # `yew/Cargo.toml.backup`).
    "yew/packages/yew",
    "yew/packages/yew-macro",
    # Paws-side WASM component fixtures that link against yew. Their
    # `[package] workspace = "../../../yew"` line was dropped in the
    # same submodule bump; they now auto-join the Paws workspace.
    "examples/yew/example-yew-counter",
    "examples/yew/example-yew-use-state-counter",
    "examples/yew/example-yew-multi-state-setters",
    "examples/yew/example-yew-use-state-eq",
    "examples/yew/example-yew-ub-deref",
    "examples/yew/example-yew-stale-read",
    "examples/yew/example-yew-child-rerender",
]
exclude = [
    "examples/example-basic-element",
    "examples/example-styled-element",
    "examples/example-nested-elements",
    "examples/example-stylesheet-cascade",
    "examples/example-parsed-stylesheet",
    "examples/example-attributes",
    "examples/example-destroy-rebuild",
    "examples/example-commit-full",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# ---------------------------------------------------------------------------
# Shared dependency versions.
#
# Only entries actually referenced via `workspace = true` in a member
# manifest are kept — see `yew/packages/*/Cargo.toml` +
# `examples/yew/*/Cargo.toml`. The full 30-entry list from
# `yew/Cargo.toml.backup` had a lot of deps (wasm-bindgen, gloo,
# web-sys, tracing-*, reqwest, …) that yew's browser/SSR features
# needed but Paws's component-model guest build path doesn't — those
# were pruned to avoid carrying dead version pins around.
# ---------------------------------------------------------------------------
[workspace.dependencies]
futures = { version = "0.3", default-features = false }
implicit-clone = { version = "0.6.0" }
proc-macro2 = "1"
quote = "1"
rustversion = "1"
serde = "1"
syn = { version = "2" }
thiserror = "2.0"
tokio = { version = "1.50.0" }
trybuild = "1"

# Inherited from `yew/Cargo.toml.backup`. yew's source uses these `cfg`
# names internally; without the allowlist rustc warns
# `unexpected_cfgs`.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(documenting)",
    "cfg(verbose_tests)",
    "cfg(yew_lints)",
    "cfg(nightly_yew)",
    "cfg(wasm_bindgen_unstable_test_coverage)",
]}
