[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
taffy = { version = "0.9.2", default-features = false, features = ["std", "flexbox", "grid", "block_layout", "calc"] }
# Note: Stylo is a complex crate from Mozilla; this is a light-weight usage surface.
# The crate name is `style` in Gecko; here we use `stylo` when available on crates.io.
stylo = "0.13"
stylo_traits = { version = "0.13", package = "stylo_traits" }
stylo_dom = { version = "0.13", package = "stylo_dom" }
stylo_atoms = { version = "0.13", package = "stylo_atoms" }
selectors = "0.36"
url = "2.5"
euclid = "0.22"
atomic_refcell = "0.1"
app_units = "0.7"
fnv = "1.0.7"
smallvec = "1.15.1"
slab = "0.4.11"
bitflags = "2.10.0"
markup5ever = "0.38.0"
rkyv = { version = "0.8.9" }
parley = { version = "0.8", features = ["system"] }
paws-style-ir = { path = "../paws-style-ir" }
# Used at library-build time via the `css!()` proc-macro to embed the
# User-Agent stylesheet as a static rkyv IR blob (see `runtime.rs`).
# Keeping it as a non-dev dep so the UA sheet is compiled in for every
# consumer (paws-runner, wasmtime-engine, ios-renderer-backend).
view-macros = { path = "../view-macros" }

[dev-dependencies]
thin-vec = "0.2"
codspeed-criterion-compat = "4.4.1"

[[bench]]
name = "layout_bench"
harness = false
