[package]
name = "ios-renderer-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
engine = { path = "../engine" }
wasmtime-engine = { path = "../wasmtime-engine" }
stylo = "0.13"
fnv = "1.0.7"

[build-dependencies]
cbindgen = "0.27"
