[package]
name = "paws-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
engine = { path = "../engine" }
wasmtime-engine = { path = "../wasmtime-engine" }
taffy = { version = "0.9.2", default-features = false }
wasmtime = { version = "43", default-features = false, features = ["runtime", "std"] }

[dev-dependencies]
wat = "1"
