[package]
name = "paws-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
engine = { path = "../engine" }
fnv = "1.0.7"
wasmtime-engine = { path = "../wasmtime-engine" }
taffy = { version = "0.9.2", default-features = false }
wasmtime = { version = "43", default-features = false, features = ["component-model", "cranelift", "pulley", "runtime", "std", "wat"] }

[dev-dependencies]
wat = "1"
