[package]
name = "rust-wasm-binding"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# TODO: coverage instrumentation (formerly via `minicov` + the
# `__paws_dump_coverage` / `__paws_coverage_ptr` exports) was removed
# during the component-model migration — those exports would have to
# live inside the wrapped core module, not at the component boundary,
# which needs a different probe path to plumb through. Kept as an empty
# feature for now so the many downstream example crates that enable it
# (`rust-wasm-binding/coverage`) keep resolving until the follow-up
# restores real coverage under the component model.
coverage = []

[dependencies]
view-macros = { path = "../view-macros" }
# wit-bindgen generates the guest-side import declarations that replace
# the old hand-written `#[link(wasm_import_module = "env")]` extern
# block. The `Guest` trait it emits is re-exported so example crates
# can implement `run` / `invoke-listener` and call `export_paws_app!`.
wit-bindgen = "0.45"

[dev-dependencies]
rkyv = { version = "0.8.9" }
paws-style-ir = { path = "../paws-style-ir" }
