[package]
name = "rust-wasm-binding"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# LLVM source-based coverage for guest WASM modules. When active, the
# `paws_main!` macro's generated `Guest::dump_coverage` impl calls
# `minicov::capture_coverage` and returns the resulting profraw bytes
# over the component ABI; the host (`wasmtime-engine::run_component_*`)
# then forwards them to `scripts/wasm-coverage.sh` for lcov
# conversion. When the feature is off the default impl returns empty
# bytes so the WIT contract is still satisfied.
coverage = ["dep:minicov"]

[dependencies]
view-macros = { path = "../view-macros" }
# wit-bindgen generates the guest-side import declarations that replace
# the old hand-written `#[link(wasm_import_module = "env")]` extern
# block. The `Guest` trait it emits is re-exported so example crates
# can implement `run` / `invoke-listener` and call `export_paws_app!`.
wit-bindgen = "0.45"
# minicov provides the `__llvm_profile_runtime` shim + an API to drain
# profraw bytes for LLVM source-based coverage. Only pulled in when
# the `coverage` feature is enabled (see above).
minicov = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
rkyv = { version = "0.8.9" }
paws-style-ir = { path = "../paws-style-ir" }
