[package]
name = "wasmtime-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Enables profraw extraction in E2E tests. When active, tests call
# `run_wasm_with_coverage` and write `.profraw` files to
# `target/wasm-coverage/` for post-processing by `scripts/wasm-coverage.sh`.
wasm-coverage = []

[dependencies]
engine = { path = "../engine" }
stylo_atoms = "0.13"
taffy = { version = "0.9.2", default-features = false }

# Cranelift compiles WASM → Pulley bytecode on iOS (no native JIT).
# `config.target("pulley64")` in create_engine() prevents W+X pages.
[dependencies.wasmtime]
version = "43"
default-features = false
features = ["cranelift", "pulley", "runtime", "std", "wat"]


[dev-dependencies]
codspeed-criterion-compat = "4.4.1"
paws-runner = { path = "../paws-runner" }

[[bench]]
name = "engine_bench"
harness = false
