[package]
name = "wasmtime-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Enables profraw extraction in E2E tests. When active, tests call
# `run_wasm_with_coverage` and write `.profraw` files to
# `target/wasm-coverage/` for post-processing by `scripts/wasm-coverage.sh`.
wasm-coverage = []

[dependencies]
engine = { path = "../engine" }
stylo_atoms = "0.13"
taffy = { version = "0.9.2", default-features = false }

# Cranelift compiles WASM → Pulley bytecode on iOS (no native JIT).
# `config.target("pulley64")` in create_engine() prevents W+X pages.
# `component-model` is required for `wasmtime::component::bindgen!` and
# the `component::Linker` / `Component::new` APIs used to load
# WIT-typed guest components built from `wit/paws.wit`.
[dependencies.wasmtime]
version = "43"
default-features = false
features = ["cranelift", "pulley", "runtime", "std", "wat", "component-model"]

# Standard WASI p2 host implementations (`wasi:io`, `wasi:clocks`,
# `wasi:random`, `wasi:filesystem`, etc.). Guests built for
# `wasm32-wasip2` that transitively use `std` or async runtimes (tokio,
# futures) import these interfaces; the host must provide
# implementations or instantiation fails with "matching implementation
# was not found in the linker". See `component_linker.rs`.
[dependencies.wasmtime-wasi]
version = "43"


[dev-dependencies]
codspeed-criterion-compat = "4.4.1"
paws-runner = { path = "../paws-runner" }
# Owns the build-time compilation of the wasm guest fixtures under
# `examples/` and exposes `example_wasm_path()` for e2e tests to
# resolve `.wasm` paths.
paws-examples = { path = "../examples" }

[[bench]]
name = "engine_bench"
harness = false
