[package]
name = "ios-example"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example app wiring ios-renderer-backend with a sample layout tree"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
ios-renderer-backend = { path = "../ios-renderer-backend" }

[build-dependencies]
cbindgen = "0.26"
