[package]
name = "example-basic-element-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component-model guest bindings generated directly from `wit/paws.wit`.
# This example deliberately does NOT depend on `rust-wasm-binding` —
# it's the minimum viable proof that the component-model host path in
# `wasmtime-engine` (see PR2a) works end-to-end with a real guest.
# Subsequent PRs will migrate `rust-wasm-binding` itself to `wit-bindgen`
# and thin out guests like this one.
wit-bindgen = "0.45"

[workspace]
