[package]
name = "css-overflow-overflow-shorthand"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-wasm-binding = { path = "../../../rust-wasm-binding", default-features = false }
yew = { path = "../../../yew/packages/yew", features = ["csr"] }

# Standalone single-crate workspace so cargo does not climb upward and
# discover the Paws root workspace. See the dom-nodes fixture's Cargo.toml
# for the long form of this comment.
[workspace]
